Fix align on Form fields labels

--- a/src/widget/css/widget.css
+++ b/src/widget/css/widget.css
@@ -72,12 +72,13 @@
 
 #properties-info{
     font-weight: bold;
-    margin: 40px 0 40px 20px;
+    margin: 40px 0 40px 10px;
 }
 
 .property{
     clear: left;
     padding: 1%;
+    margin-left: 30px
 }
 
 .newPropertyFields{
@@ -171,13 +172,13 @@
 
 .customize-mandatory-email{
     font-weight: bold;
-    margin: 70px 0 10px 20px;
+    margin: 70px 0 10px 10px;
     clear: left;
 }
 
 .customize-mandatory-button{
     font-weight: bold;
-    margin: 70px 0 10px 10px;
+    margin: 70px 0 10px 0px;
     clear: left;
 }
 
@@ -190,6 +191,7 @@
     width: 250px;
     margin-top: 27px;
     margin-right: 60px;
+    margin-left: 30px;
 }
 
 .mandatoryEmailLanguageInput input {
